Fixed overflow css

--- a/src/Components/Header/Menu/index.scss
+++ b/src/Components/Header/Menu/index.scss
@@ -78,13 +78,14 @@ nav {
 
 div {
     &.overflow {
+        display: none;
         position: absolute;
         right: 0;
         width: 100%;
         background-color: rgba(0,0,0,0.8);
         top: 0;
         height: 100vh;
-        z-index: -1;
+        z-index: -999;
         backdrop-filter: blur(5px);
         -webkit-backdrop-filter: blur(5px);
         opacity: 0;
